--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Knowledge</h1>
         <p>This is a simple webpage built with HTML, CSS, and JavaScript.</p>
     </header>
     
