--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <img src="https://github.com/manindrachinni/knowledge_agent/blob/main/nubys_technology_logo.jpg" alt="Nubys Tech Logo" class="logo">
+                <img src="https://manindrachinni.github.io/knowledge_agent/nubys_technology_logo.jpg" alt="Nubys Tech Logo" class="logo">
                 <div class="company-name">Nubys Tech</div>
             </div>
             <div class="search-container">
