--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <div class="sections">
             <div class="section cars">
                 <h3>Premium Cars</h3>
-                <img src="https://cdnjs.cloudflare.com/ajax/libs/placeholder-imgs/1.0.0/premium-car.jpg" alt="Luxury car">
+                <img src="https://github.com/manindrachinni/knowledge_agent/blob/main/Luxury%20car.jpg" alt="Luxury car">
                 <p>Discover our collection of premium cars that combine performance, luxury, and style. From sleek sedans to powerful SUVs, we have the perfect vehicle for your needs.</p>
                 <p>Our latest models feature advanced technology, efficient fuel consumption, and state-of-the-art safety features that ensure a comfortable and secure driving experience.</p>
                 <div class="features">
@@ -329,7 +329,7 @@
             
             <div class="section bikes">
                 <h3>Performance Bikes</h3>
-                <img src="https://cdnjs.cloudflare.com/ajax/libs/placeholder-imgs/1.0.0/performance-bike.jpg" alt="Racing bike">
+                <img src="https://github.com/manindrachinni/knowledge_agent/blob/main/Race%20Car.jpg" alt="Racing bike">
                 <p>Experience the thrill of riding with our high-performance bikes. Engineered for speed, agility, and control, our bikes are perfect for both urban commuting and weekend adventures.</p>
                 <p>Each bike is crafted with precision, using lightweight materials and innovative designs to deliver an unmatched riding experience for enthusiasts of all levels.</p>
                 <div class="features">
@@ -353,7 +353,7 @@
         <div class="sections">
             <div class="section cars">
                 <h3>Family Cars</h3>
-                <img src="https://cdnjs.cloudflare.com/ajax/libs/placeholder-imgs/1.0.0/family-car.jpg" alt="Family SUV">
+                <img src="https://github.com/manindrachinni/knowledge_agent/blob/main/SUV%20Cars.jpg" alt="Family SUV">
                 <p>Looking for the perfect family vehicle? Our range of spacious and reliable family cars offers the ideal combination of comfort, safety, and practicality for your everyday needs.</p>
                 <p>With flexible seating arrangements, ample storage space, and family-friendly features, our cars are designed to make every journey a pleasure, whether it's the school run or a cross-country adventure.</p>
                 <div class="features">
@@ -375,7 +375,7 @@
             
             <div class="section bikes">
                 <h3>Mountain Bikes</h3>
-                <img src="https://cdnjs.cloudflare.com/ajax/libs/placeholder-imgs/1.0.0/mountain-bike.jpg" alt="Mountain bike">
+                <img src="https://github.com/manindrachinni/knowledge_agent/blob/main/Mountain%20Bike.jpg" alt="Mountain bike">
                 <p>Conquer any terrain with our rugged mountain bikes. Built to handle the toughest trails and challenging conditions, these bikes combine durability with performance.</p>
                 <p>Our mountain bikes feature responsive suspension systems, powerful brakes, and durable components that stand up to the rigors of off-road riding, giving you confidence to push your limits.</p>
                 <div class="features">
