--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             
             <div class="section bikes">
                 <h3>Performance Bikes</h3>
-                <img src="https://manindrachinni.github.io/knowledge_agent/Race%20Car.jpg" alt="Racing bike">
+                <img src="https://manindrachinni.github.io/knowledge_agent/Performance_Bike.jpg" alt="Racing bike">
                 <p>Experience the thrill of riding with our high-performance bikes. Engineered for speed, agility, and control, our bikes are perfect for both urban commuting and weekend adventures.</p>
                 <p>Each bike is crafted with precision, using lightweight materials and innovative designs to deliver an unmatched riding experience for enthusiasts of all levels.</p>
                 <div class="features">
